# nonmem-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/theopp/: gof_plot.R  gof_plot_v2.R  run001.ctl  run002.ctl  run003.ctl  run004.ctl  run005.ctl  run006.ctl  run007.ctl  run008.ctl  run009.ctl  run010.ctl  run011.ctl  run012.ctl  run013.ctl  run014.ctl  run015.ctl
src/nonmem_mcp/: __main__.py  server.py
src/nonmem_mcp/parsers/: control_stream_parser.py  dataset_parser.py  ext_parser.py  lst_parser.py  table_parser.py
src/nonmem_mcp/tools/: diagnostics.py  execute.py  mrgsolve.py  psn.py
src/nonmem_mcp/types/: nonmem.py
tests/: test_parsers.py
tests/fixtures/: sample.ctl  sample.ext  sample.lst
